Chrome bookmarks toast - adding undo shortcut description as aria-label.

This change adds an aria-label to the "undo" button of the form
"press Control plus Z to undo".
It will appropriately insert either "Control" or "Command" depending on
platform.

BUG=856209

Change-Id: I95f917b8d6722ad8362dea2295bfc4aaf82f6259
Reviewed-on: https://chromium-review.googlesource.com/c/1229737
Commit-Queue: Chris Hall <chrishall@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: calamity <calamity@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598682}
Former-commit-id: f62ade2c4adfe24cdcb8850499434e122aa6cde1