chrome/browser/ui/webui/md_bookmarks/md_bookmarks_ui.cc
@@ -24,6 +24,7 @@
 #include "content/public/browser/web_ui.h"
 #include "content/public/browser/web_ui_data_source.h"
 #include "content/public/common/content_features.h"
+#include "ui/base/accelerators/accelerator.h"
 #include "ui/base/l10n/l10n_util.h"
 #include "ui/base/resource/resource_bundle.h"
 
@@ -40,6 +41,15 @@ void AddLocalizedString(content::WebUIDataSource* source,
 content::WebUIDataSource* CreateMdBookmarksUIHTMLSource(Profile* profile) {
   content::WebUIDataSource* source =
       content::WebUIDataSource::Create(chrome::kChromeUIBookmarksHost);
+
+  // Build an Accelerator to describe undo shortcut
+  // NOTE: the undo shortcut is also defined in md_bookmarks/command_manager.js
+  // TODO(b/893033): de-duplicate shortcut by moving all shortcut definitions
+  // from JS to C++.
+  ui::Accelerator undoAccelerator(ui::VKEY_Z, ui::EF_PLATFORM_ACCELERATOR);
+  source->AddString("undoDescription", l10n_util::GetStringFUTF16(
+                                           IDS_BOOKMARK_BAR_UNDO_DESCRIPTION,
+                                           undoAccelerator.GetShortcutText()));
 
   // Localized strings (alphabetical order).
   AddLocalizedString(source, "addBookmarkTitle",
